--- a/app/src/main/res/layout/activity_live_details.xml
+++ b/app/src/main/res/layout/activity_live_details.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/ic_img_default"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             />
         <ImageView
             android:id="@+id/iv_player"
